css/loc.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Cairo', sans-serif;
   
    display: block;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

/* Card */
.card-container {
    display: flex;
    background: #fff;
    width: 900px;
    height: 400px;
    border-radius: 6px;
    overflow: hidden;
    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     margin: 40px auto;
}

/* Map */
#map {
    flex: 1.5;
    height: 100%;
    position: relative;
}

/* nice overlay shadow */
#map::after {
    content: "";
    position: absolute;
    inset: 0;
    box-shadow: inset 0 0 40px rgba(0,0,0,0.2);
    pointer-events: none;
}

/* Info box */
.info-box {
    flex: 1;
    padding: 30px;
    display: flex;
    flex-direction: column;
}

.pharmacist-name {
    font-size: 1.2rem;
    margin-bottom: 20px;
    font-weight: bold;
}

.item-row {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding: 12px 0;
    border-bottom: 1px solid #eee;
}

.item-row:last-child {
    border-bottom: none;
}

.sub-number {
    padding: 0;
    margin-top: -8px;
}

.text-data {
    font-size: 1rem;
    color: #444;
}

.icon-circle {
    background-color: rgb(255, 247, 0);
    color: white;
    width: 34px;
    height: 34px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 12px;
}

.map-link {
    color:  rgb(255, 247, 0);
    text-decoration: none;
    font-weight: bold;
}

/* Responsive */
@media (max-width: 768px) {
    .card-container {
        flex-direction: column;
        height: auto;
        width: 95%;
    }

    #map {
        height: 300px;
        min-height: 300px;
        order: 2;
    }
    .info-box {
        order: 1;
    }
}

